# rust.vm

./: Cargo.toml  compiled  instructions  lexer.py  output  test
code/add/: asm.s  ini
code/add128/: add128_state
code/fac64_128/: fac64_128_test.s
code/fact/: asm.s  ini
code/if/: asm.s
code/init/: init_state  init_test.s
code/lshift64_128/: lshift64_128_state
code/multi/: asm.s  ini
code/shift/: asm.s  ini
src/: lib.rs  main.rs
src/cpu/: decoder.rs  fetcher.rs  mod.rs  stack.rs
src/cpu/instruction/: branch_condition_code.rs  mod.rs  opcode.rs  register_address.rs
src/file_opener/: mod.rs
src/instruction/: operation.rs
src/ram_parser/: mod.rs
src/registers_parser/: mod.rs
